--- a/riscv_core_c5gx.qsf
+++ b/riscv_core_c5gx.qsf
@@ -763,6 +763,7 @@ set_global_assignment -name VERILOG_FILE baseline_c5gx.v
 set_global_assignment -name VERILOG_FILE hex_decoder.v
 set_global_assignment -name VERILOG_FILE picorv32.v
 set_global_assignment -name VERILOG_FILE riscv_core_c5gx.v
+set_global_assignment -name VERILOG_FILE simpleuart.v
 set_global_assignment -name MISC_FILE firmware.list
 set_global_assignment -name BOARD "Cyclone V GX Starter Kit"
 set_global_assignment -name EDA_SIMULATION_TOOL "Questa Altera FPGA (Verilog)"
