updated qsf to inlude SDC file

--- a/riscv_core_c5gx.qsf
+++ b/riscv_core_c5gx.qsf
@@ -759,6 +759,7 @@ set_global_assignment -name ACTIVE_SERIAL_CLOCK FREQ_100MHZ
 set_global_assignment -name OPTIMIZE_HOLD_TIMING "ALL PATHS"
 set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING ON
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
+set_global_assignment -name SDC_FILE riscv_core_c5gx.SDC
 set_global_assignment -name VERILOG_FILE baseline_c5gx.v
 set_global_assignment -name VERILOG_FILE hex_decoder.v
 set_global_assignment -name VERILOG_FILE picorv32.v
