--- a/riscv_core_c5gx.qsf
+++ b/riscv_core_c5gx.qsf
@@ -760,10 +760,10 @@ set_global_assignment -name OPTIMIZE_HOLD_TIMING "ALL PATHS"
 set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING ON
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name VERILOG_FILE baseline_c5gx.v
+set_global_assignment -name VERILOG_FILE uart_full.v
 set_global_assignment -name VERILOG_FILE hex_decoder.v
 set_global_assignment -name VERILOG_FILE picorv32.v
 set_global_assignment -name VERILOG_FILE riscv_core_c5gx.v
-set_global_assignment -name VERILOG_FILE simpleuart.v
 set_global_assignment -name VERILOG_FILE sd_spi_bridge.v
 set_global_assignment -name VERILOG_FILE sram_controller.v
 set_global_assignment -name SDC_FILE riscv_core_c5gx.SDC
